<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final.Project.Groom.Bobby</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_button">Let\'s Play Jeopardy!</string>
    <string name="title_activity_game_setup">GameSetupActivity</string>
    <string name="text_difficulty_selection">Please select a difficulty</string>
    <string name="button_easy">Easy</string>
    <string name="button_medium">Medium</string>
    <string name="button_hard">Hard</string>
    <string name="title_activity_game_board">GameBoardActivity</string>
    <string name="button_first_row">$200</string>
    <string name="button_second_row">$400</string>
    <string name="button_third_row">$600</string>
    <string name="button_fourth_row">$800</string>
    <string name="button_fifth_row">$1000</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="button_new_profile">New Profile</string>
    <string name="label_select_num_players">Please select the number of players.</string>
    <string name="button_guest">Guest</string>
    <string name="button_login">Login</string>
    <string name="button_start">Start!</string>
    <string name="title_activity_add_player">AddPlayer</string>
    
    <string name="title_username_enter">Please enter a unique username</string>
    <string name="button_accept_user_name">Accept</string>
    <string name="label_hint_textbox">Enter your guess here</string>
    

</resources>
