<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select_num_players" />

        <RadioGroup
            android:id="@+id/radioGroupNumUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioUser1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="1" />

            <RadioButton
                android:id="@+id/radioUser2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="11"
        android:layout_weight="4"
        android:baselineAligned="false" >

        <ListView
            android:id="@+id/listViewPlayer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:choiceMode="singleChoice"
 			android:listSelector="@drawable/JeopardyBluePressed" >
        </ListView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:weightSum="4" >

            <Button
                android:id="@+id/buttonNewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/button_new_profile"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textFiller1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible"
                android:text="Filler" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonPlayer1Guest"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/button_guest" />

                <Button
                    android:id="@+id/buttonPlayer2Guest"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/button_guest" />
            </LinearLayout>

             <Button
                android:id="@+id/buttonStartGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/button_start"
                android:layout_weight="1" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewPlayer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" >
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

</LinearLayout>