<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="6"
    android:background="#000"
    tools:context="${relativePackage}.${activityClass}" >
    <TableRow
        android:weightSum="6"
        android:layout_marginTop="4dp" >
        <TextView
            android:id="@+id/textPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Player 1: "
            android:textColor="#FFF"
            android:gravity="right"/>
            
        <TextView
            android:id="@+id/textPlayer1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="$1000"
            android:textColor="#FFF"
            android:gravity="left"/>
        
        <TextView
            android:id="@+id/textWhosTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Player 1, chose a category"
            android:textColor="#FFF"
            android:gravity="center"/>
            
        <TextView
            android:id="@+id/textPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Player 2: "
            android:textColor="#FFF"
            android:gravity="right"/>
            
        <TextView
            android:id="@+id/textPlayer2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="$1000"
            android:textColor="#FFF"
            android:gravity="left"/>
        
    </TableRow>
    
    <TableRow
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/textCol1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:ellipsize="none"
            android:gravity="center"
            android:lines="3"
            android:maxLines="100"
            android:text="TextView"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCol2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:gravity="center"
            android:lines="3"
            android:text="TextView"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCol3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:gravity="center"
            android:lines="3"
            android:text="TextView"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCol4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:gravity="center"
            android:lines="3"
            android:text="TextView"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCol5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:gravity="center"
            android:lines="3"
            android:text="TextView"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCol6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:gravity="center"
            android:lines="3"
            android:text="TextView"
            android:textColor="#e9e306"
            android:textStyle="bold" />
    </TableRow>
    
    <TableRow
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/buttonRow1Col1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/button_first_row"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow1Col2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_first_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow1Col3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_first_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow1Col4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_first_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow1Col5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_first_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow1Col6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_first_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />
    </TableRow>
    
    <TableRow
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/buttonRow2Col1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_second_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow2Col2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_second_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow2Col3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_second_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow2Col4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_second_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow2Col5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_second_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow2Col6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_second_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />
    </TableRow>
    
    <TableRow
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/buttonRow3Col1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_third_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow3Col2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_third_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow3Col3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_third_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow3Col4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_third_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow3Col5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_third_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow3Col6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_third_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />
    </TableRow>
    
    <TableRow
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/buttonRow4Col1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fourth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow4Col2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fourth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow4Col3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fourth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow4Col4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fourth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow4Col5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fourth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow4Col6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fourth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />
    </TableRow>
    
    <TableRow
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/buttonRow5Col1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fifth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow5Col2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fifth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow5Col3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fifth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow5Col4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fifth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow5Col5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fifth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRow5Col6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_fifth_row"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:textColor="#e9e306"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>
